--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=9050
 spring.application.name=TaskManager
+spring.datasource.url=jdbc:postgresql://localhost:5432/TaskManager_db
+spring.datasource.username=postgres
+spring.datasource.password=123324
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
